# agent-box

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  github-issue.md  justfile  plan-issue-16.md  plan-issue-17.md  plan-issue-20.md  plan-issue-21.md  plan-remove-improvements.md  plan-v2.md  plan.md
.github/workflows/: docs-pages.yml
ab/: Cargo.toml  README.md
ab/src/: main.rs
ab/src/runtime/: mod.rs
adr/: 0001-agent-portal.md  0002-transparent-portal-wrappers.md
common/: Cargo.toml  README.md  config.schema.json
common/src/: config.rs  display.rs  lib.rs  path.rs  portal.rs  portal_client.rs  repo.rs
contrib/systemd/: agent-portal-host.service
docs/: book.toml
docs/scripts/: generate-cli-reference.nu
docs/src/explanation/architecture/: agent-box-overview.md  agent-box-workflow.md
docs/src/explanation/rationale/: security-model.md
docs/src/explanation/rationale/adr/: 0002-transparent-portal-wrappers.md
docs/src/how-to/portal/: debug-wrapper-failures.md  enable-pi-image-paste.md
docs/src/reference/agent-box/: cli.md  config.md  requirements.md
docs/src/reference/common/: env-vars.md
docs/src/reference/portal/: cli.md  config.md  wrapper-contract.md
docs/src/tutorials/agent-box/: first-run.md
docs/src/tutorials/portal/: first-run-standalone.md
docs/src/tutorials/portal-with-agent-box/: connect-portal-to-agent-box.md
nix/home-manager/: agent-portal.nix
portal/: Cargo.toml  README.md
portal/src/: host.rs
wrappers/: Cargo.toml  README.md
wrappers/src/: lib.rs
