[workspace]
members = [
  "common",
  "ab",
  "portal",
  "wrappers",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
agent-box-common = { path = "common" }
clap = { version = "4.5.54", features = ["derive"] }
eyre = "0.6.12"
figment = { version = "0.10.19", features = ["toml", "test"] }
gix = { version = "0.77.0", features = ["blocking-network-client", "status"] }
glob = "0.3.2"
inquire = "0.7"
jj-lib = { version = "0.37.0", features = ["git"] }
nix = "0.30.1"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
walkdir = "2.5"
serde_json = "1.0"
