[package]
name = "ab"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ab"
path = "src/main.rs"

[dependencies]
agent-box-common.workspace = true
agent-portal = { path = "../portal" }
clap.workspace = true
eyre.workspace = true
glob.workspace = true
inquire.workspace = true
nix = { workspace = true, features = ["user"] }
