[package]
name = "agent-box-common"
version = "0.1.0"
edition = "2024"

[dependencies]
gix = { version = "0.77.0", features = ["blocking-network-client", "status"] }
nix = { version = "0.30.1", features = ["fs", "user", "socket"] }
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "test"] }
jj-lib = { version = "0.37.0", features = ["git"] }
eyre = "0.6.12"
inquire = "0.7"
walkdir = "2.5"
shell-words = "1.1.1"
glob = "0.3.2"
rmp-serde = "1.3.0"
