[package]
name = "agent-box-common"
version.workspace = true
edition.workspace = true

[dependencies]
eyre.workspace = true
figment.workspace = true
gix.workspace = true
glob.workspace = true
inquire.workspace = true
jj-lib.workspace = true
nix = { workspace = true, features = ["fs", "user", "socket"] }
rmp-serde.workspace = true
serde.workspace = true
shell-words.workspace = true
walkdir.workspace = true
