[package]
name = "agent-portal"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-portal-host"
path = "src/bin/agent-portal-host.rs"

[[bin]]
name = "agent-portal-cli"
path = "src/bin/agent-portal-cli.rs"

[dependencies]
agent-box-common.workspace = true
clap.workspace = true
eyre.workspace = true
nix = { workspace = true, features = ["socket"] }
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wl-clipboard-rs = "0.9.3"
