[package]
name = "agent-wrappers"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wl-paste"
path = "src/bin/wl-paste.rs"

[[bin]]
name = "agent-portal-client"
path = "src/bin/agent-portal-client.rs"

[dependencies]
agent-box-common.workspace = true
clap.workspace = true
eyre.workspace = true
